crates/uitest/fixtures/ty_check/call_field.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: fixtures/ty_check/call_field.fe
---
error[2-0010]: no method named `y` found for struct `Foo`
   ┌─ call_field.fe:15:15
   │
15 │     let y = s.y()
   │               ^ field `y` in `Foo` has type `u16`
